<resources>
    <!-- Activiy Title -->
    <string name="app_name">Formula E Calendar</string>
    <string name="shortcut_details_label">Next Race</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_about">About</string>
    <string name="tab_calendar">Races</string>
    <string name="tab_driver">Drivers</string>
    <string name="tab_team">Teams</string>

    <!-- All -->
    <string name="connection_fault">Connot fetch data.\nPlease check your internet connection.</string>
    <string name="no_data_fault">Data not available (yet)</string>
    <string name="snackbar_retry">retry</string>
    <string name="no_event">No upcoming race</string>


    <!-- calendar -->
    <string name="cal_account_name">Formula E Calendar</string>
    <string name="cal_calendar_name">Formula E</string>
    <string name="cal_event_race">Race</string>
    <string name="cal_event_quali">Qualifying</string>
    <string name="cal_event_round">Round</string>

    <!-- Menu -->
    <string name="menu_filter">Season</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_rate">Rate this app</string>
    <string name="menu_feedback">Give feedback</string>
    <string name="menu_reload">Reload</string>

    <!-- Season chooser -->
    <string name="chooser_select_season">Select a season</string>
    <string name="chooser_negative">Abort</string>


    <!-- Feedback -->
    <string name="feedback_email" translatable="false">a.eilers.dev@gmail.com</string>
    <string name="feedback_subject">Feedback to Formula E Calendar</string>
    <string name="title_send_feedback">Send feedback via</string>

    <!-- Date and Time -->
    <string name="format_date">LLL dd, yyyy</string>
    <string name="format_time">KK:mm a</string>

    <!-- Card -->
    <string name="card_next_up">Next Race</string>

    <!-- Settings -->
    <string name="pref_notification_title">Notification</string>
    <string-array name="pref_notification_time">
        <item>no reminder</item>
        <item>at start</item>
        <item>30 minutes before the race</item>
        <item>1 hour before the race</item>
        <item>1 day before the race</item>
    </string-array>
    <string-array name="pref_notification_value" translatable="false">
        <item>-1</item>
        <item>0</item>
        <item>30</item>
        <item>60</item>
        <item>1440</item>
    </string-array>
    <string name="pref_notification_default" translatable="false">1440</string>

    <string name="pref_notification_time_description">Reminder for Races</string>
    <string name="pref_notification_time_title">Show reminder</string>

    <string name="pref_calendar_description">Adds a calendar with all races to your calendar app</string>
    <string name="pref_calendar_title">Calendar</string>

    <string name="pref_calendar_add">Add calendar</string>
    <string name="pref_calendar_show_quali">Show qualifying</string>
    <string name="pref_calendar_show_quali_description">Show also the qualifying in the calendar</string>

    <string name="pref_about_title">About</string>

    <!-- Notification -->
    <string name="noti_channel_id" translatable="false">channel_reminder</string>
    <string name="noti_channel_name">Reminder</string>
    <string name="noti_channel_description">Reminds you of upcoming races.</string>
    <string name="noti_no_title">Upcoming Formula E Race</string>
    <string name="noti_content">at %s</string>

    <!-- About -->
    <string name="about_author">Author</string>
    <string name="about_license">License</string>
    <string name="about_link">Link</string>

    <!-- Details -->
    <string name="details_round">Round</string>
    <string name="details_circuit">Circuit</string>
    <string name="details_laps">laps</string>
    <string name="details_on_map">%s in Google Maps</string>
    <string name="details_distance">km</string>
    <string name="details_results">Results</string>
    <string name="details_no_results">No results yet</string>
    <string name="details_no_mps">No Google Maps found</string>

    <!-- widget -->
    <string name="widget_next_up">Next Race</string>
    <string name="widget_no_next">No Race</string>
    <string name="widget_loading">Loading...</string>
</resources>
