<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="30"
        android:title="@string/menu_rate"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_rate"
        android:orderInCategory="50"
        android:title="@string/menu_rate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="70"
        android:title="@string/menu_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="90"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
</menu>