<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/details_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!-- TODO statusBarScrim has not the right color -->
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/details_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@color/colorPrimaryDark">

            <ImageView
                android:id="@+id/details_image_head"
                android:layout_width="match_parent"
                android:layout_height="@dimen/details_image_height"
                android:layout_weight="1"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:transitionName="city"
                app:layout_collapseMode="parallax"
                android:background="@color/background_no_image" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_view"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <ProgressBar
        android:id="@+id/details_progress_bar"
        style="?android:progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/details_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/details_card_time"
                android:layout_width="@dimen/card_max_width"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/card_margin"
                card_view:cardCornerRadius="@dimen/card_corner_radius">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/details_text_round"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:paddingLeft="@dimen/card_padding_left"
                        android:text="@string/details_round"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/card_padding_left">

                        <ImageView
                            android:id="@+id/details_image_date"
                            android:layout_width="@dimen/details_icon_size"
                            android:layout_height="@dimen/details_icon_size"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_date_range_black_24dp" />

                        <TextView
                            android:id="@+id/details_text_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="@dimen/details_text_padding_left"
                            android:paddingTop="@dimen/details_text_padding_top"
                            android:text="16. Nov. 2017"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/card_padding_left">

                        <ImageView
                            android:id="@+id/details_image_quali"
                            android:layout_width="@dimen/details_icon_size"
                            android:layout_height="@dimen/details_icon_size"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_timer_black_24dp" />

                        <TextView
                            android:id="@+id/details_text_quali"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="@dimen/details_text_padding_left"
                            android:paddingTop="@dimen/details_text_padding_top"
                            android:text="11:00 - 12:00 Uhr"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/card_padding_left">

                        <ImageView
                            android:id="@+id/details_image_race"
                            android:layout_width="@dimen/details_icon_size"
                            android:layout_height="@dimen/details_icon_size"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_traffic_black_24dp" />

                        <TextView
                            android:id="@+id/details_text_race"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="@dimen/details_text_padding_left"
                            android:paddingTop="@dimen/details_text_padding_top"
                            android:text="16:00 - 17:00 Uhr"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/details_card_circuit"
                android:layout_width="@dimen/card_max_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details_card_time"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/card_margin"
                card_view:cardCornerRadius="@dimen/card_corner_radius">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/curcuit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:paddingLeft="@dimen/card_padding_left"
                        android:text="@string/details_circuit"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/card_padding_left">

                        <ImageView
                            android:id="@+id/details_image_laps"
                            android:layout_width="@dimen/details_icon_size"
                            android:layout_height="@dimen/details_icon_size"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_refresh_black_24dp" />

                        <TextView
                            android:id="@+id/details_text_laps"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="@dimen/details_text_padding_left"
                            android:paddingTop="@dimen/details_text_padding_top"
                            android:text="@string/details_laps"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/card_padding_left">

                        <ImageView
                            android:id="@+id/details_image_distance"
                            android:layout_width="@dimen/details_icon_size"
                            android:layout_height="@dimen/details_icon_size"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_keyboard_tab_black_24dp" />

                        <TextView
                            android:id="@+id/details_text_distance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="@dimen/details_text_padding_left"
                            android:paddingTop="@dimen/details_text_padding_top"
                            android:text="@string/details_distance"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/card_padding_left">

                        <ImageView
                            android:id="@+id/details_image_map"
                            android:layout_width="@dimen/details_icon_size"
                            android:layout_height="@dimen/details_icon_size"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_place_black_24dp" />

                        <TextView
                            android:id="@+id/details_text_map"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="openMap"
                            android:paddingLeft="@dimen/details_text_padding_left"
                            android:paddingTop="@dimen/details_text_padding_top"
                            android:text="auf Karte anzeigen"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/details_card_results"
                android:layout_width="@dimen/card_max_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details_card_circuit"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/card_margin"
                card_view:cardCornerRadius="@dimen/card_corner_radius">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:paddingLeft="@dimen/card_padding_left"
                        android:text="@string/details_results"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse" />


                    <TextView
                        android:id="@+id/details_text_results"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="@dimen/details_text_padding_left"
                        android:paddingTop="@dimen/details_text_padding_top"
                        android:paddingBottom="@dimen/details_text_padding_top"
                        android:text="@string/details_no_results"
                        android:visibility="visible"/>

                    <ProgressBar
                        android:id="@+id/details_results_progress_bar"
                        style="?android:progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/details_recycler_results"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"/>


                </LinearLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
